<resources>
    <string name="app_name" translatable="false">MdgWa</string>
    <string name="app_desc">An LSPosed module to customize your WhatsApp</string>
    <string name="antirevoke">Anti-Revoke Messages</string>
    <string name="antirevoke_sum">Messages will not be deleted for you</string>
    <string name="ghostmode">Hide Typing</string>
    <string name="ghostmode_sum">Users cannot see that you are typing</string>
    <string name="ghostmode_r">Hide Recording Audio</string>
    <string name="ghostmode_sum_r">Users cannot see that you are recording audio</string>
    <string name="hidetag">Hide \'Forwarded\' Tag</string>
    <string name="hidetag_sum">Forward messages without the tag</string>
    <string name="hidestatusview">Hide Status View</string>
    <string name="hidestatusview_sum">View statuses without users knowing</string>
    <string name="hideread">Hide Blue Ticks</string>
    <string name="hideread_sum">View messages within conversation screen without users knowing</string>
    <string name="danger">Notice</string>
    <string name="reboot">Whenever you change something on this screen, restart WhatsApp!</string>
    <string name="reboot_module">Restart Module</string>
    <string name="funcoes">Functions</string>
    <string name="perso">Customization</string>
    <string name="segundosnahora">Seconds on Timestamp</string>
    <string name="segundosnahora_sum">Display seconds next to any timestamp within the app</string>
    <string name="textonahora">Add text next to message timestamp</string>
    <string name="no_active">If you are on this screen, it means that you do not have the module active yet, do not have LSPosed installed, nor have a WhatsApp APK patched by LSPatch.\n\nPlease fix it, restart the module, and try again</string>
    <string name="viewonce">Disable View Once</string>
    <string name="viewonce_sum">Open view once media many times</string>
    <string name="novotema">New WhatsApp theme</string>
    <string name="novotema_sum">Change the color and icon theme to the new WhatsApp theme</string>
    <string name="antirevokestatus">Anti-Delete Status</string>
    <string name="antirevokestatus_sum">View statuses that users have since deleted</string>
    <string name="hidereceipt">Hide Delivered</string>
    <string name="lorem_ipsum_dolor" translatable="false">Lorem Ipsum Dolor</string>
    <string name="lorem_ipsum_dolor_sum" translatable="false">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="hidereceipt_sum">Users will not know that their messages have been delivered to you\n(CAUTION: May cause delay in receiving messages)</string>
    <string name="outros">Others</string>
    <string name="antirevoke_title">Anti-Revoke</string>
    <string name="privacy_title">Privacy Settings</string>
    <string name="settings_title">"Setings"</string>
    <string name="autoreboot">Auto Restart</string>
    <string name="autoreboot_sum">When enabled, WhatsApp will automatically restart for apply changes that require it</string>
    <string name="xposedinit_error">Error starting LSPosed</string>
    <string name="ampm">Time in 12-Hour Format</string>
    <string name="media_settings">Media Settings</string>
    <string name="statusdowload">Download Status</string>
    <string name="statusdowload_sum">Show button to download user statuses</string>
    <string name="videoquality">HD Quality Videos</string>
    <string name="videoquality_sum">Send videos in HD quality, by default</string>
    <string name="colors_title">Colors</string>
    <string name="colors_customization">Customize your colors</string>
    <string name="colors_customization_sum">Change all colors in your WhatsApp, try it now!</string>
    <string name="current_color_s">Current color: %s</string>
    <string name="apply_button">Apply</string>
    <string name="invalid_color">Invalid Color</string>
    <string name="social_media_title">Social Media</string>
    <string name="telegram_group">Telegram Group</string>
    <string name="telegram_channel">Telegram Channel</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="itsmadruga">ItsMadruga (Owner)</string>
    <string name="darker935">Darker935 (Contributor)</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="required_version_s">Required version: %s</string>
    <string name="installed_version_s">Installed version: %s</string>
    <string name="whatsapp_version_error">This WhatsApp version is not supported by our module, please use the required WhatsApp version</string>
    <string name="whatsapp_not_installed">WhatsApp is not installed! Install and try again</string>
    <string name="restart_whatsapp">Restart WhatsApp</string>
    <string name="media_title">Media</string>
    <string name="general">General</string>
    <string name="novahome">New Home Style</string>
    <string name="conversation">Conversation Screen</string>
    <string name="primary_color">Primary Color</string>
    <string name="background_color">Background Color</string>
    <string name="secondary_color">Secondary Color</string>
    <string name="novaconfig">New Settings Style</string>
    <string name="novaconfig_sum">Enable the new settings style, with profile photo on home screen toolbar</string>
    <string name="novahome_sum">Enable the new home style, with bottom navigation</string>
    <string name="novofiltro">Filter Chats</string>
    <string name="novofiltro_sum">Enable native filter chats located on the top of home screen, to filter by contacts, groups, unread and others</string>
    <string name="menuwicon">Menu Icons</string>
    <string name="menuwicon_sum">Add icons next to menu options across the app</string>
    <string name="strokebuttons">Buttons Stroke</string>
    <string name="strokebuttons_sum">Stroke around some buttons on WhatsApp</string>
    <string name="outlinedicons">Outlined Icons</string>
    <string name="outlinedicons_sum">New outlined icons style</string>
    <string name="freezelastseen">Freeze Last Seen</string>
    <string name="freezelastseen_sum">Your last seen time will be frozen (NOTE: You will not see any presence updates from other users, like typing, recording, online)</string>
    <string name="removeforwardlimit_sum">Remove forward limit for 5 chats (normal) and 1 chat (multiple times)</string>
    <string name="removeforwardlimit">Remove Forward Limit</string>
    <string name="forward">Forward</string>
    <string name="home">Home Screen</string>
    <string name="showname">Show Name</string>
    <string name="showname_sum">Show your profile name at the top of home screen, instead of \"WhatsApp\"</string>
    <string name="showbio_sum">Show your bio below the title of toolbar</string>
    <string name="showbio">Show Bio</string>
    <string name="reset_preferences">Reset Preferences</string>
    <string name="reset_preferences_sum">Tap here to reset all preferences you have set in this module</string>
    <string name="reset_preferences_message">This action will reset all saved preferences in module\; you will need to toggle all buttons again</string>
    <string name="reset">Reset</string>
    <string name="bubble_left">Left Bubble</string>
    <string name="bubble_right">Right Bubble</string>
    <string name="general_summary">Customizations implemented natively by WhatsApp</string>
    <string name="home_summary">Customize home screen to your liking</string>
    <string name="conversation_summary">Customize view of the conversation screen, like balloons, entry, and others</string>
    <string name="privacy_summary">Hide read confirmation, hide receipt, freeze last seen, and more</string>
    <string name="media_summary">Download statuses, media settings, and more</string>
    <string name="module_working_text">Module working with %s</string>
    <string name="module_not_working">Module not working</string>
    <string name="lsposed_not_found">LSPosed not found</string>
    <string name="lspatch_not_found">LSPatch not found</string>
    <string name="loading">Loading</string>
    <string name="module_not_enabled_text">Module is disabled on LSPosed</string>
    <string name="module_not_setted_text">Module is enabled, but the scope is empty</string>
    <string name="imagequality">HD Quality Images</string>
    <string name="imagequality_sum">Send images in HD quality, by default</string>
    <string name="downloadviewonce">Download View Once</string>
    <string name="downloadviewonce_sum">Show button to download view once media</string>
    <string name="separate_groups">Separate Groups</string>
    <string name="separate_groups_sum">Separate your chats by: Groups, Private Chats, Status, Calls, Communities</string>
    <string name="blueonreply">Send Blue Ticks upon Reply</string>
    <string name="blueonreply_sum">Sends blue ticks after replying to a message\n(NOTE: Must have \"Hide Blue Ticks\" active)</string>
    <string name="hide_archived_chat">Hide Archived Chats</string>
    <string name="hide_archived_chat_sum">Hide archived chats\; view them by holding WhatsApp title on home screen</string>
    <string name="hide_once_view_seen">Hide View Once and Audio Seen</string>
    <string name="hide_once_view_seen_sum">Hide that view one media and audio has been seen</string>
    <string name="call_blocker">Block Calls</string>
    <string name="call_blocker_sum">Block WhatsApp calls based on privacy type</string>
    <string name="show_online_dot_in_conversation_list">Show Online Dot in Conversation List</string>
    <string name="show_online_dot_in_conversation_list_sum">Show a green online dot on home screen (NOTE: Must activate show online for everyone in WhatsApp\'s Privacy Settings menu)</string>
    <string name="show_dnd_button">Show DND Button</string>
    <string name="show_dnd_button_sum">Show button for DND Mode on home screen toolbar</string>
    <string name="dev4mod">Dev4Mod (Contributor)</string>
    <string name="disable_pinned_limit">Disable Pinned Chats Limit</string>
    <string name="disable_pinned_limit_sum">Disable limit of 3 pinned chats</string>
    <string name="delete_for_everyone_all_messages">\"Delete for everyone\" on all messages</string>
    <string name="delete_for_everyone_all_messages_sum">Remove the 24-hour limit on deleting a message for everyone</string>
    <string name="antirevoke_buttons_desable">Desabled</string>
    <string name="antirevoke_buttons_show_text">Show Text</string>
    <string name="antirevoke_buttons_show_icon">Show Icon</string>
    <string name="call_blocker_buttons_no_block">No Block</string>
    <string name="call_blocker_buttons_all_block">Block all calls</string>
    <string name="call_blocker_buttons_only_unknown_block">Block only unknown numbers</string>
    <string name="show_edited_message_history">Show Edited Message History</string>
    <string name="show_edited_message_history_sum">Show edited message history when clicking \'Edited\' on a message</string>
    <string name="dnd_message">When Do Not Disturb mode is on, you will be unable to send or receive messages</string>
    <string name="dnd_mode_title">DND Mode</string>
    <string name="activate">Activate</string>
    <string name="cancel">Cancel</string>
    <string name="edited_history">Edited History</string>
    <string name="message_original">Message Original</string>
    <string name="new_chat">New Chat</string>
    <string name="number_with_country_code">Number with country code</string>
    <string name="message">Message</string>
    <string name="download">Download</string>
    <string name="reboot_whatsapp">(Restart WhatsApp)</string>
    <string name="error_when_saving_try_again">Error when saving, try again</string>
    <string name="saved_to">"Saved to "</string>
    <string name="hide_tabs_on_home">Hide Tabs on Home</string>
</resources>