<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:other="http://schemas.its.madruga.wpp/other"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/general"
                android:textSize="32sp"
                android:textStyle="bold" />
        </LinearLayout>

                    <com.google.android.material.card.MaterialCardView
                        style="@style/Widget.Material3.CardView.Elevated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <its.madruga.wpp.views.SwitchButtonTop
                                android:id="@+id/autoreboot"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:summary="@string/autoreboot_sum"
                                android:tag="autoreboot"
                                android:text="@string/autoreboot"
                                android:title="@string/settings_title" />

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/reset_preferences"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="16dp"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:paddingHorizontal="7dp"
                                        android:paddingVertical="7dp"
                                        android:text="@string/reset_preferences"
                                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                                        android:textSize="16sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_vertical"
                                        android:lineSpacingExtra="-1dp"
                                        android:paddingHorizontal="7dp"
                                        android:text="@string/reset_preferences_sum"
                                        android:textSize="12sp" />

                                </LinearLayout>

                            </androidx.appcompat.widget.LinearLayoutCompat>

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:id="@+id/restart_whatsapp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:drawablePadding="5dp"
                                        android:gravity="center_vertical"
                                        android:paddingHorizontal="7dp"
                                        android:paddingVertical="12dp"
                                        android:text="@string/restart_whatsapp"
                                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                                        android:textSize="17sp"
                                        android:textStyle="bold"
                                        app:drawableEndCompat="@drawable/icons8_refresh" />


                                </LinearLayout>

                            </androidx.appcompat.widget.LinearLayoutCompat>


                        </LinearLayout>


                    </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <its.madruga.wpp.views.SwitchButtonTop
                    android:id="@+id/ampm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="ampm"
                    other:reboot="true"
                    android:title="@string/general"
                    android:text="@string/ampm" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/segundos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    other:reboot="true"
                    android:summary="@string/segundosnahora_sum"
                    android:tag="segundos"
                    android:text="@string/segundosnahora" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/MdgWa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textonahora"
                        android:padding="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/secondstotime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

<!--                <its.madruga.wpp.views.SwitchButton-->
<!--                    android:id="@+id/novotema"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:summary="@string/novotema_sum"-->
<!--                    android:tag="novotema"-->
<!--                    other:reboot="true"-->
<!--                    android:text="@string/novotema" />-->

<!--                <its.madruga.wpp.views.SwitchButton-->
<!--                    android:id="@+id/novofiltro"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:summary="@string/novofiltro_sum"-->
<!--                    android:tag="novofiltro"-->
<!--                    other:reboot="true"-->
<!--                    android:text="@string/novofiltro" />-->

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/strokebuttons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/strokebuttons_sum"
                    android:tag="strokebuttons"
                    other:reboot="true"
                    android:text="@string/strokebuttons" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/menuwicon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/menuwicon_sum"
                    android:tag="menuwicon"
                    other:reboot="true"
                    android:text="@string/menuwicon" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/outlinedicons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/outlinedicons_sum"
                    android:tag="outlinedicons"
                    other:reboot="true"
                    android:text="@string/outlinedicons" />

                <its.madruga.wpp.views.SwitchButton
                    android:id="@+id/novaconfig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:summary="@string/novaconfig_sum"
                    android:tag="novaconfig"
                    other:reboot="true"
                    android:text="@string/novaconfig" />

<!--                <its.madruga.wpp.views.SwitchButton-->
<!--                    android:id="@+id/showdndbutton"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:summary="@string/show_dnd_button_sum"-->
<!--                    android:tag="show_dndmode"-->
<!--                    other:reboot="true"-->
<!--                    android:text="@string/show_dnd_button" />-->

<!--                <its.madruga.wpp.views.SwitchButton-->
<!--                    android:id="@+id/dotonline"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:summary="@string/show_online_dot_in_conversation_list_sum"-->
<!--                    android:tag="dotonline"-->
<!--                    other:reboot="true"-->
<!--                    android:text="@string/show_online_dot_in_conversation_list" />-->

<!--                <its.madruga.wpp.views.MultichoiceButton-->
<!--                    android:id="@+id/hidetabs"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:entries="@array/tabshide_contents"-->
<!--                    android:entryValues="@array/tabshide_values"-->
<!--                    android:summary="@string/hide_tabs_on_home_sum"-->
<!--                    android:tag="hidetabs"-->
<!--                    other:reboot="true"-->
<!--                    android:text="@string/hide_tabs_on_home" />-->

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>